--- a/3.html
+++ b/3.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <div class="content">
-          <img src="images/3.1.png" alt="1">
+          <img src="images/3.1.png" alt="1" style="max-width: 100%;">
+          <img src="images/3.2.png" alt="1" style="max-width: 100%;">
     </div>
     <div class="footer">
         <a href="index.html">Назад</a>
