--- a/13.html
+++ b/13.html
@@ -10,7 +10,70 @@
 </head>
 <body>
     <div class="content">
-
+        <br>
+        Управление конфликтами в организации<br>
+        Управление конфликтами – процесс целенаправленного воздействия на персонал организации с целью устранения причин, породивших конфликт и приведение поведения участников конфликта в соответствии со сложившимися нормами взаимоотношений в коллективе.<br>
+        <br>
+        В зависимости от поведения конфликтующих сторон выделяют следующие группы управления конфликтами:<br>
+        1. Внутриличностные методы.<br>
+        2. Структурные методы.<br>
+        3. Межличностные методы.<br>
+        4. Переговоры.<br>
+        5. Ответные агрессивные действия.<br>
+        <br>
+        Внутриличностные методы воздействуют на отдельную личность и заключаются в правильной организации своего поведения, в умении высказывать свою точку зрения, не вызывая защитной реакции со стороны оппонента. Основан на передаче другому лицу того или иного отношения к определенному предмету без требований и обвинений, но так чтобы другой человек изменил свое отношение.<br>
+        <br>
+        Структурные методы воздействуют преимущественно на участников организационных конфликтов, возникающих из-за неправильного распределения функций, прав и ответственности, плохой организации труда, несправедливой системой мотивации труда. К ним относятся:<br>
+        1. Разъяснение требований к работе.<br>
+        2. Использование координационных механизмов.<br>
+        3. Разработка и уточнение общеорганизационных целей.<br>
+        4. Создание обоснованной системы вознаграждений.<br>
+        Разъяснение требований к работе реализуется посредством разработки соответствующих должностных инструкций, положений и документов, регламентирующих распределение функций, прав и ответственности.<br>
+        <br>
+        Использование координационных механизмов – задействование структурных подразделений организации или должностных лиц, которые при необходимости могут вмешаться в конфликт или помочь устранить причины спора между конфликтующими сторонами.<br>
+        <br>
+        Разработка и уточнение общеорганизационных целей позволяет объединить усилия всех сотрудников организации, направит их на достижение общих целей.<br>
+        <br>
+        Межличностные методы – выбор стиля поведения участников конфликта, чтобы свести к минимуму ущерб своих интересов.<br>
+        К ним относятся:<br>
+        1. Приспособление (уступчивость).<br>
+        2. Уклонение.<br>
+        3. Противоборство.<br>
+        4. Сотрудничество или компромисс.<br>
+        5. Принуждение.<br>
+        6. Решение проблемы.<br>
+        <br>
+        Переговоры – набор приемов, направленных на поиск взаимоприемлемых для противоборствующих сторон решений. Тактики ведения переговоров:<br>
+        1. Тактика позиционного торга.<br>
+        2. Технология решения проблемы.<br>
+        <br>
+        Ответные агрессивные действия приводят к разрешению конфликтной ситуации с применением силы.<br>
+        По признаку принадлежности к направлению управления конфликтами выделяют 3 группы методов:<br>
+        1. Уход от конфликта.<br>
+        2. Подавление конфликта.<br>
+        3. Управление конфликтом.<br>
+        <br>
+        Уход от конфликта: его преимущество в оперативности принимаемого решения. Применяется в случае ненужности  данного конфликта или, если очень высоки издержки возможного конфликта. Его применяют в случае банальности проблемы, при наличии более важных поблеем, требующих решения, при потребности выиграть время для сбора необходимой информации и ухода от немедленного принятия решения.<br>
+        <br>
+        Разновидности метода:<br>
+        1. Метод уступки.<br>
+        2. Метод бездействия.<br>
+        3. Метод сглаживания: используется в организациях, ориентированных на коллективные методы трудового процесса и основан на убеждении, что различия между сталкивающимися сторонами не столь значительны.<br>
+        <br>
+        Подавление конфликта – применение активных действий по ликвидации конфликтной ситуации.<br>
+        Разновидности метода:<br>
+        1. Метод скрытых действий: применяется, когда стечения экономических, политических, социальных или психологических обстоятельств делает невозможным открытый конфликт.<br>
+        2. Метод быстрого решения – решение по проблеме, вызвавшей конфликт, принимается в самые короткие сроки.<br>
+        Управление конфликтами:<br>
+        1. Умение отличать главное от второстепенного.<br>
+        2. Внутреннее спокойствие.<br>
+        3. Умение подходить к проблеме с разных точек зрения.<br>
+        4. Готовность к любым неожиданностям.<br>
+        5. Восприятие действительности такой, какой она есть.<br>
+        6. Наблюдательность.<br>
+        7. Стремление к выходу за рамки проблемной ситуации.<br>
+        8. Дальновидность.<br>
+        9. Умение извлекать опыт из всего происходящего.<br>
     </div>
     <div class="footer">
         <a href="index.html">Назад</a>
