--- a/7.html
+++ b/7.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="content">
-
+        <img src="images/7.1.jpg" alt="">
     </div>
     <div class="footer">
         <a href="index.html">Назад</a>
