--- a/12.html
+++ b/12.html
@@ -10,7 +10,42 @@
 </head>
 <body>
     <div class="content">
-
+        <br>
+        Введение<br>
+        Эффективное управление человеческими ресурсами не возможно без применения методов воздействия и влияния руководителя на персонал. Методы воздействия являются неотъемлемыми и важнейшими факторами в структуре управления трудом персонала.<br>
+        Проблема влияния руководителя на персонал на данный момент очень актуальна, так как управление – это взаимодействие того, кто управляет с тем, кем управляют. Таким образом, очевидно, что в процессе взаимодействия влияние осуществляется постоянно в самых разных формах. Важно, чтобы влияние было осознанным, целенаправленным со стороны руководителя.<br><br>
+        Умение влиять на персонал помогает руководителю решить следующие немаловажные задачи, во-первых: мотивировать сотрудников, что может положительно сказаться на их профессиональном развитии и росте. Во-вторых: помочь подчинённому творчески выразиться в труде. В-третьих: сплотить группу сотрудников в коллектив. В-четвёртых: руководитель и его команда придут к успеху, экономической выгоде.<br>
+        <br>
+        Анализ методов психологического влияния руководителя на персонал организации<br>
+        Воздействие – в психологии это целеинтенциональный перенос какого –либо движения, информации от одного участка корреляции к другому или же воздействия одних нейроструктур на другие. Воздействие может классифицироваться, как непосредственно-конвергенционное, когда сама динамика движения и заключается в самом движении кодоинформация экстрапалируется в форме импульсных сигналов-движений [20].<br>
+        Влияние – процесс и результат изменения индивидом или социальной группой поведения других людей, их позиций, оценок и установок. Механизмом направленого влияния являются убеждение и внушение, механизмом ненаправленого влияния – подражание и заражение. Влияние может быть прямым и косвенным. Критерий его полезности – реализуемые в нём социальные ценности [1].<br><br>
+        Психологическое влияние — это воздействие на психическое состояние, чувства, мысли и поступки других людей с помощью исключительно психологических средств: вербальных, паралингвистических или невербальных [16].<br>
+        Психологическое влияние — это воздействие на состояние, мысли, чувства и действия другого человека с помощью исключительно психологических средств, с предоставлением ему права и времени отвечать на это воздействие [16]. Из этого определения мы видим, как Сидоренко определяет понятие психологического влияния через понятие психологического воздействия, что не допустимо если рассматривать определение воздействия по словарю Юрчука [20].<br>
+        <br>
+        Убеждение – основной, наиболее универсальный метод руководства и воспитания [3]. Механизм убеждения основан на активизации умственной деятельности человека, на обращении к рациональной стороне сознания. Предполагается, что убеждаемый должен осуществить сознательный выбор путей и средств достижения цели, т.е. чтобы убедить, надо привлечь внимание объекта воздействия, изложить и разъяснить новую информацию, привести впечатляющие аргументы.<br>
+        Убедить кого-либо в чем-либо – значит добиться такого состояния, когда убеждаемый, вследствие логических рассуждений и умозаключений, согласится с определенной точкой зрения и будет готов защищать ее или действовать в соответствии с ней [14].<br><br>
+        Основными средствами убеждения выступают графический знак, образ, тембр речи, жест, мимика, эмоционально-волевые состояния, ритм речи и действий, свет и цвет наглядного средства, результаты труда, статус и авторитет убеждающего. Следует добавить, что не все люди в равной степени обладают готовностью принять точку зрения воздействующего лица. Чаще всего воспринимается лишь та информация, которая согласуется с имеющимися установками [1].<br>
+        Внушение (суггестия) – форма непосредственного психического воздействия, связанная с ослаблением сознательного контроля; выступает как стихийный компонент повседневного общения или как специально организуемый вид коммуникации, рассчитанный на некритическое восприятие информации [5]. Внушение – один из механизмов воздействия на массовое и индивидуальное сознание, широко используемое в массовой коммуникации, рекламе, распространении моды и в политическом манипулировании; аутосуггестия (саомвнушение) является средством психической саморегуляции [5].<br>
+        Внушение – воздействие на поведение и психику человека, предполагающее некритическое восприятие им особенностей информации [3]. Внушение осуществляется посредством вербальных и невербальных средств. Общаясь, люди постоянно воздействуют друг на друга, внушая или навязывая друг другу свои мнения, оценки, настроения [3]. Сила внушения увеличивается во время стихийных бедствий (землетрясений, наводнений), а также под влиянием целенаправленной рекламы, значимости передаваемой информации, авторитета говорящего [3].<br><br>
+        Особенностью внушения является его адресованность не к логике и разуму личности, не к её готовности мыслить и рассуждать, а к готовности внутренне принять передаваемые сведения, указываемые сведения [8]. Внушение, отмечал Бехтерев, действует путём непосредственного прививания психических состояний, то есть идей, чувствований и ощущений, не требуя вообще никаких доказательств и не нуждаясь в логике [8].<br><br>
+        При внушении у личности, подвергающейся внушению, могут возникать определённые барьеры. Болгарский психотерапевт Г. Лозанов утверждает, что с возрастом у человека формируются три барьера: критическо-логический, интуитивно-эффектный и этический [8]. Все, что не содержит впечатления добронамеренной логической выдержанности, доверия и чувства уверенности, все, что противоречит этическим принципам личности, как правило, отбрасывается.<br>
+        В этой связи Г. Лозанов предлагает такие преодоления данных барьеров [8]:<br>
+        1.авторитет источника воздействия,<br>
+        2. инфантилизация (создание атмосферы раскрепощенности, подлаживания, игривости, подобно той, что царит в детских играх),<br>
+        3.двуплановость (подключение дополнительных раздражителей: мимики, пантомимики, декорации),<br>
+        4. интонации,<br>
+        5.ритм,<br>
+        6.псевдопассивность (налаживание спокойного отношения, доверия к источнику информации, снятие страха перед возможной неудачей) [8].<br>
+        <br>
+        Прямое внушение - достигается путем непосредственного словесного воздействия эмоционально насыщенным, повелительным тоном [15]. Словесная формула при этом имеет вид прямой речи, обращенной к объекту воздействия. В ней выражается требуемое поведение либо состояние, которое должно наступить сразу же после высказанных слов [15]. Фразы должны быть резкими (но не оскорбительными), которые легко запоминаются [15]. Наиболее важные фразы следует повторять несколько раз [15]. Речь внушающего может сопровождаться средствами, усиливающими эффект воздействия (жесты, мимика, интонация и ритм) [15]. Громкость речи варьируется в зависимости от индивидуальных состояний и важности той или иной фразы в формуле [15].<br>
+        <br>
+        Приёмы внушения<br>
+        1.	Приемы прямого внушения - совет, предложение, внушающее наставление, команда, приказ.<br>
+        2.	Приемы косвенного внушения - намек, одобрение, осуждение, "обманутое ожидание" и др.<br>
+        3.	Приемы скрытого внушения -трюизм, иллюзия выбора, предоставление всех вариантов, увязывание действительного и желаемого.<br>
+        <br>
+        Совет и предложение – эти приемы наиболее эффективны в том случае, если объект проникся доверием к внушающему. Приемы прямого внушения требуют различной постановки голоса, интонации предложений, жестикуляции. Так, при использовании совета для внушения, тон должен быть мягкий, доброжелательный. В то же время, исследования психологов показывают, что многие люди не знают своих интонационных особенностей. В результате этого очень часто совет подается менторским тоном, естественно вызывающим внутренний протест у внушаемого. Чтобы избавиться от этого недостатка, нужно целенаправленно тренировать интонирование речи с использованием видеозаписи, магнитозаписи голоса [15].<br>
+        
     </div>
     <div class="footer">
         <a href="index.html">Назад</a>
