--- a/6.html
+++ b/6.html
@@ -10,7 +10,44 @@
 </head>
 <body>
     <div class="content">
-
+        <br>
+Лидерство и управление.<br>
+Понятие управления – процесс воздействия управляющих субъектов на управляемый объект с помощью реализации определенных управленческих методов и функций (планирования, организации, контроля, мотивации).<br>
+Лидерство и управление дополняют друг друга, необходимо и то и другое. Общее между управлением и лидерством состоит во взаимодействии людей и во влиянии, воздействии одних людей (руководителей, лидеров) на других (подчиненных, последователей).  <br><br>
+Но между ними есть существенные различия. Лидерство – это лишь один из типов управленческих отношений, базирующийся на социальном взаимодействии. Лидер – это тот, кому удается превратить сотрудника в своего единомышленника или последователя. Главная суть лидерства состоит в наличии последователей, а не просто сотрудников и подчиненных. <br>
+Лидер превращает сотрудников, сослуживцев, независимо от того, подчиненные они или нет, в последователей по убеждению. Отсюда следует, что лидерами могут быть не только управленцы, руководители. Лидерство проявляется не только в сфере управления, а в любых сферах, где есть отношения и взаимодействия людей. <br><br>
+В какой мере сотрудник становится последователем в такой мере менеджер – лидером. Дорогу к лидерству ему открывает должность. Влияние с позиции только должности называется формальным лидерством, которое отождествляется с руководством. В своем влиянии на людей руководитель может полагаться только на полномочия, которые дает ему занимаемая должность. Но желательно для влияния использовать и иные ресурсы, нежели должностные полномочия, тогда это будет не просто руководство, а лидерство. Для лидерства необходимо больше, чем просто формальная власть. Процесс влияние через ресурсы иные, чем занимаемая должность, такие как личностные черты и использование ситуационных факторов, получил название неформального лидерства. <br>
+Какие есть еще отличия между менеджером, руководителем и лидером?<br>
+<br>
+Менеджер  большую часть времени вынужден отдавать выполнению текущих, часто рутинных работ. Управление неразрывно связано с организацией (предприятием, фирмой) и теми процессами, которые там происходят. Лидерство может существовать и 
+вне организации. Функции управления осуществляются официальным руководством (начальством), а сами руководители (менеджер или управляющие) обеспечивают выполнение заданий остальными работниками (сотрудниками) потому, что это положено им делать по должности. Сослуживцы следуют за руководителем в силу формальных причин, которые называются служебными обязанностями. За лидером же последователи идут в силу субъективных причин, часто неформального характера. Лидеры прививают чувство значимости выпол¬няемых заданий и тем самым любовь к работе. Они являются проводниками миссии организации. <br>
+Управляющий, руководитель, администратор становятся во главе группы в результате намеренного действия формальной организации — делегирования полномочий. Лидером же можно стать либо по воле организации, либо вопреки ей. При этом члены 
+организации всегда знают, кто является руководителем, а вот ведомые не всегда знают, что их ведут лидеры. Действия лидеров не ограничиваются рамками каких-либо полномочий и структур.<br>
+Лидерство и власть.<br>
+<br>
+Власть – это способность одного человека влиять на поведение другого в нужном направлении независимо от его желания. В основе власти всегда лежит зависимость. Зависимость - такой характер отношений, при которых один человек вынужден поступать, мыслить или чувствовать так, как к этому подводит другой человек (или обстоятельства, условия). <br>
+В лидерстве используются разные виды власти, следовательно, и влияние. <br>
+Поэтому лидерство и определяют как влияние на других людей или взаимовлияние в группе. Однако лидерство, это не любое влияние, а такое, которое отвечает следующим условиям: <br><br>
+1) влияние должно быть постоянным. К лидерам нельзя причислять людей, оказывающих хотя и большое, но разовое, кратковременное воздействие на членов группы; <br>
+2) руководящее воздействие лидера должно осуществляться на всю группу (организацию). Известно, что внутри любого крупного объединения существует несколько или даже множество центров локального влияния. Особенностью лидера является широта его влияния; <br>
+3) лидер должен иметь явный приоритет во влиянии. Отношения лидера и ведомых отличают асимметричность, неравенство во взаимодействии, однозначная направленность воздействия от лидера к членам группы; <br>
+4) влияние лидера, особенно организационного, должно опираться не на прямое применение силы, а на авторитет или хотя бы признание правомерности руководства. Диктатор, силой удерживающий группу в подчинении, - это не лидер. <br>       
+Понятия «лидерство» и «власть» тесно связаны: лидеры пользуются разного рода властью, чтобы достичь поставленных целей. Вместе с тем, различие в том, что лидерство предполагает не только и не столько зависимость, а, как правило, добровольное следование за лидером. Также лидерство предполагает необходимость достижения целей, а проявление власти, её использование всегда происходит через зависимость и не обязательно связано с необходимостью достичь цель (власть ради 
+ощущения власти, хотя это тоже цель).<br>
+<br>
+Власть реализуется через влияние, а инструменты влияния или основы власти могут быть разные. Соответственно выделяют и разные виды власти:<br>
+- власть, основанная на страхе (увольнения, разглашения личной информации, получения неудовлетворительной оценки и т.д.);<br>
+- власть, основанная на убеждении (презентация нового товара с целью заключения договора о его покупке);<br>
+- власть, основанная на вознаграждениях (повышение заработной платы, продвижение и пр.)<br>
+- власть, основанная на владении важной информацией (например, необходимой для правильного принятия решения), частный случай – экспертная власть, как обладание такой информацией, которая важна и необходима для других людей<br>        
+- власть, основанная на способности вызвать определенные чувства и эмоции эмоциональная власть, (например, формирование позитивного отношения к работе, к товару и т.д.).<br>
+Как видно, вести за собой других людей для достижения цели, то есть проявлять лидерство, можно через разные виды власти. <br>
+<br>
+К источникам власти относятся:<br>
+- структура организация, предусматривающая наличие формальной власти, то есть официально делегированной и закрепленной документально способности влиять на других (власть начальника отдела, власть руководителя проекта)<br>
+- определенные личностные качества (например, харизматичность, эмоциональный интеллект, способность манипулировать другими и др., позволяющие подчинять или располагать к себе людей и вести их за собой);<br>
+- знания (например, знания технологии презентации или невербального поведения могут быть использованы для позитивного влияния на людей);<br>
+- обладание важными для других, незаменимыми и ограниченными ресурсами. Определяющим успех компании, следовательно, прибыль и далее заработную плату всех подразделений, условием является сбыт произведенной продукции, им и занимаются маркетологи. Для того, чтобы ослабить власть и снизить зависимость многие организации предпочитают иметь не одного, а нескольких поставщиков продукции, сырья, а многие люди стремятся к финансовой независимости, чтобы ограничить себя от власти других людей.<br>
     </div>
     <div class="footer">
         <a href="index.html">Назад</a>
