--- a/7.html
+++ b/7.html
@@ -10,7 +10,46 @@
 </head>
 <body>
     <div class="content">
-
+        Процесс принятия управленческих решений<br><br>
+Управленческое решение - это творческий акт, направленный на устранение<br>
+проблем, которые возникли на субъекте управления (организация, фирма и т.д.).Принятие<br>
+управленческих решений является основой управления. Выработка и принятие решений<br>
+это творческий процесс в деятельности руководителей любого уровня, включающий:<br>
+выработку и постановку цели;<br>
+изучение проблемы на основе получаемой информации;<br>
+выбор и формулирование оптимального решения;<br>
+принятие решения;<br>
+Технология менеджмента рассматривает управленческое решение как процесс,<br>
+состоящий из трех стадий: подготовка решения: принятие решения: реализация решения.<br>
+На стадии подготовки управленческого решения проводится экономический<br>
+анализ ситуации на микро и макроуровне, включающий поиск, сбор и обработку<br>
+информации, а также выявляются и формируются проблемы, требующие решения.<br>
+На стадии принятия решения осуществляется разработка и оценка<br>
+альтернативных решений и курсов действий, проводимых на основе многовариантных<br>
+расчетов; производится отбор критериев выбора оптимального решения; выбор и принятие<br>
+наилучшего решения.<br><br>
+На стадии реализации решения принимаются меры для конкретизации решения и<br>
+доведения его до исполнителей, осуществляется контроль за ходом его выполнения,<br>
+вносятся необходимые коррективы и дается оценка полученного результата от выполнения<br>
+решения.<br><br>
+Управленческие решения могут быть обоснованными, принимаемыми на основе<br>
+экономического анализа и многовариантного расчета, и интуитивными, которые, хотя и<br>
+экономят время, но содержит в себе вероятность ошибок и неопределенность.<br>
+Принимаемые решения должны основываться на достоверной, текущей и<br>
+прогнозируемой информации, анализе всех факторов, оказывающих влияние на решения, с<br>
+учетом предвидения его возможных последствий.<br>
+На практике эффективному принятию решений препятствуют разные ограничения,<br>
+такие как узкие полномочия менеджеров, недостаток ресурсов (финансы, персонал). Для<br>
+выбора альтернатив определяются стандарты принятия решений - критерии оценки.<br><br>
+Пример:<br>
+У организации за последние три года наблюдается негативная тенденция снижения<br>
+прибыли. Аналитики утверждают, что это связано с тем, что продажи фирмы снижаются,<br>
+товар на рынке теряет конкурентоспособность, затраты растут и есть необходимость<br>
+увольнения части персонала с целью сокращения затрат предприятия.<br>
+В данной ситуации:<br>
+Цель принятия решения - повысить прибыль предприятия.<br>
+Проблема - негативная тенденция снижения показателя прибыли в течении трех лет.<br>
+Решение: Увольнение части персонала
     </div>
     <div class="footer">
         <a href="index.html">Назад</a>
