--- a/10.html
+++ b/10.html
@@ -10,8 +10,36 @@
 </head>
 <body>
     <div class="content">
-
-    </div>
+        Мотивация — это комплексный подход к управлению персоналом, направленный на создание побудительных мотивов, целью которых является продуктивное выполнение сотрудником своих обязанностей.<br>
+        <br>
+        Цель мотивации: формирование определённого подхода, который ориентирован на создание условий, которые обеспечивают высокую продуктивность сотрудников.<br>
+        <br>
+        В рамках организации система мотивации рассматривается как постановка целей, соответствующих индивидуальным потребностям и желаниям. Соответственно система мотивации способствует поведению, которое необходимо для достижения организационных целей.<br>
+        <br>
+        В целом в системе мотивации должны быть отражены перспективы развития организации, так как мотивация подразумевает целенаправленное поведение и определяется им.<br>
+        <br>
+        Грамотно спланированная, устойчиво действующая па всех персональных уровнях мотивационная система является одним из основных факторов, гарантирующих эффективную деятельность организации.<br>
+        <br>
+        Группы мотивационных факторов (по У. Херсбергу):<br>
+        1. Базовые мотивы — факторы, которые чаще всего вызывают неудовлетворение персонала:<br>
+        • оплата, система вознаграждений;<br>
+        • компенсационные, социальные выплаты;<br>
+        • вопросы, связанные с организацией рабочего и информационного пространства.<br>
+        <br>
+        2. Побудительные мотивы.<br>
+        • карьерный рост;<br>
+        • личностный профессиональный рост;<br>
+        • креативная (творческая) самореализация.<br>
+        <br>
+        Система мотивации представляет собой совокупность методов мотивации.<br>
+        <br>
+        Основные методы мотивации:<br>
+        • справедливое вознаграждение в виде систем материального и нематериального стимулирования;<br>
+        • принуждение — основано на опасении подвергнуться взысканию, например в виде штрафа, перевода на ниже-оплачиваемую работу и т.д.;<br>
+        • солидарность — развитие у работников ценностей и целей, совпадающих или близких к ценностям и целям организации с использованием убеждения, воспитания, обучения и создания благоприятной производственной атмосферы;<br>
+        • приспособление — воздействие на цели организации путем частичного их приспособления к целям менеджеров высшего и среднего управленческого звена.<br>
+        <br>
+        Специалистов IT сферы отличает сочетание высокого интереса к своей работе и повышенного уровня знаний и компетенции. Наличие этих факторов может привести к отказу от конкретной работы в случае, если из-за недостаточной мотивации интерес к ней пропадет. Необходимо сочетание материальных и нематериальных стимулов для удержания сотрудника на работе и повышения его эффективности.   </div>
     <div class="footer">
         <a href="index.html">Назад</a>
     </div>
