--- a/5.html
+++ b/5.html
@@ -10,7 +10,27 @@
 </head>
 <body>
     <div class="content">
-
+        Коммерческие организации<br>
+<br>
+Главной целью создания и функционирования коммерческих организаций является получение прибыли.<br>
+<br>
+Виды коммерческих организаций согласно законодательству:<br>
+полные товарищества - это коммерческие организации, которые создаются на основе специального договора. Все участники несут имущественную ответственность за деятельность организации;<br>
+производственные кооперативы - это коммерческие организации, осуществляющие деятельность на основе личного желания граждан, с целью ведения совместной хозяйственной или производственной деятельности. Руководящий орган - собрание членов кооператива;<br>
+общества с ограниченной ответственностью - организации, в которых уставной капитал разделен на доли между учредителями согласно учредительным документам. Прибыль между участниками распределяется согласно их долям;<br>
+муниципальные и государственные унитарные предприятия - это коммерческие организации, не имеющие права распоряжаться имуществом, которое закреплено за ними собственником. Органуправления - руководитель, назначенный собственником предприятия;<br>
+коммандитные товарищества - это коммерческие организации, в которых участники отвечают по обязательствам и долгам предприятия своим имуществом;<br>
+общества с дополнительной ответственностью - это общества, основанные одним или несколькими учредителями;<br>
+акционерные общества - организации, в которых уставной капитал разделяется на равное по стоимости число акций. Собрание акционеров -главный орган управления.<br>
+<br>
+Некоммерческие организации<br>
+<br>
+Некоммерческие организации создаются с самыми разными целями.<br>
+Объединения создаются только гражданами на основе личного членства для удовлетворения духовных и иных нематериальных потребностей. Как правило, деятельность таких организаций строится на основе членских взносов и устава. Наиболее массовыми организациями подобного типа являются различные партии, клубы, кружки.<br>
+Фонды могут создаваться гражданами и / или юридическими лицами и преследуют социальные, благотворительные, культурные, образовательные и иные полезные цели. Учредители фонда, граждане и другие организации передают фонду финансовые и материальные ценности для достижения общественно полезных целей.<br>
+Учреждения создаются собственником для осуществления управленческих, социально-культурных и иных функций некоммерческого характера. Собственник финансирует полностью или частично такую организацию, подготавливает ее устав, определяющий структуру управления и права учреждения.<br>
+Союзы и ассоциации создаются коммерческими организациями для координации их деятельности, защиты общих имущественных интересов. Союзы (ассоциации) могут создаваться и некоммерческими организациями, включая и учреждения с теми же целями. Члены ассоциации подписывают устав, определяющий состав и компетенцию органов управления, порядок принятия ими решений.<br>
+Потребительский кооператив создается гражданами и юридическими лицами для удовлетворения материальных и других потребностей. Члены кооператива также вносят взносы. Деятельность кооператива регулирует устав, устанавливающий систему управления, размер взносов и т. д.
     </div>
     <div class="footer">
         <a href="index.html">Назад</a>
